--- a/less/_variables.less
+++ b/less/_variables.less
@@ -22,4 +22,4 @@
 
 // color names
 @bg-color-names: positive, negative, background, primary, secondary, info, success, warning, error, transparent;
-@text-color-names: @bg-color-names;
+@text-color-names: positive, negative, background, primary, secondary, info, success, warning, error;
